fixed images stretching

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -9,9 +9,7 @@
     background-color: #30d5c8;
     background-position: center;
     background-repeat: no-repeat;
-   
     @media screen and (min-width:960px){
-       
     }
     .hero {
         display: flex;
@@ -30,10 +28,11 @@
         flex-flow:column;
         padding:2rem 1.5rem;
         img {
+            height: auto;
             margin-bottom: 1rem;
             @media screen and (min-width:960px){
-            height: 100vh;
-            width: 80vw;
+            height: auto;
+            width: 50vw;
             }
         }
     }
@@ -58,11 +57,11 @@
         flex-flow:column;
         img {
             height: auto;
-        width: 50vw;
-        border-radius: 100%;
-        @media screen and (min-width:960px){
+            width: 50vw;
+            border-radius: 100%;
+            @media screen and (min-width:960px){
             width: 20vw;
-        }
+            }
         }
     }
     }
@@ -72,5 +71,15 @@
         align-items: center;
         flex-flow:column;
         height: 60vh;
+    }
+    .ingredients{
+        img {
+            height: auto;
+            width: 90vw;
+            margin: 1rem;
+            @media screen and (min-width:960px){
+                width: 50vw;
+            }
+        }
     }
 }
